[gd_scene load_steps=7 format=3 uid="uid://cu7t6a3wmaeka"]

[ext_resource type="Texture2D" uid="uid://btpece6xiwpra" path="res://Art/CardBack.png" id="1_pbb5x"]
[ext_resource type="Script" uid="uid://diughyud403be" path="res://Scripts/Card.gd" id="1_uxh54"]
[ext_resource type="Texture2D" uid="uid://ypuyocdio6g" path="res://Art/Card-Ruby.png" id="2_uxh54"]

[sub_resource type="Animation" id="Animation_k2ktc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardFront:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardBack:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_uxh54"]
resource_name = "show"
length = 0.37
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardFront:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardBack:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8bs63"]
_data = {
&"RESET": SubResource("Animation_k2ktc"),
&"show": SubResource("Animation_uxh54")
}

[node name="Card" type="Control"]
custom_minimum_size = Vector2(160, 200)
layout_mode = 3
anchors_preset = 0
offset_left = -80.0
offset_top = -100.0
offset_right = 80.0
offset_bottom = 100.0
script = ExtResource("1_uxh54")

[node name="CardBack" type="TextureRect" parent="."]
custom_minimum_size = Vector2(160, 200)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(80, 100)
mouse_filter = 2
texture = ExtResource("1_pbb5x")
expand_mode = 4
stretch_mode = 5

[node name="CardFront" type="TextureRect" parent="."]
custom_minimum_size = Vector2(160, 200)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(80, 100)
mouse_filter = 2
texture = ExtResource("2_uxh54")
expand_mode = 4
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8bs63")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
